--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,35 @@
+@import url('https://fonts.googleapis.com/css2?family=PT+Serif&family=Tapestry&display=swap');
+
 html {
     color: white;
+}
+
+
+
+.canvas3D{
+    /* display: flex; */
+    /* width: auto; */
+    /* max-width: 100vw; */
+    height: 40vw;
+    /* margin-left: 1vw; */
+    margin-top: 170px;
+    z-index: 100;
+
+
+
+    /* margin-right: 40vw; */
+    /* position: fixed/ */
+    /* z-index: 100; */
+}
+
+.xenotechMarquee{
+    font-size: 100px;
+    position: absolute;
+    top: 10vw;
+    overflow-y: hidden;
+    /* width: auto; */
+
+    z-index: 100;
 }
 
 ::-webkit-scrollbar {
@@ -16,7 +46,28 @@ html {
 }
 
 body {
-    background-image: linear-gradient(315deg, #404040 0%, #121212 74%);}
+    /* background-image: linear-gradient(315deg, black 0%, #181818 74%); */
+
+    background: linear-gradient(-45deg, #020024, #6a11be, #1d004f, #020024);
+    background-size: 400% 400%;
+    animation: gradient 15s ease infinite;
+    /* height: 100vh; */
+}
+
+
+@keyframes gradient {
+    0% {
+        background-position: 0% 50%;
+    }
+
+    50% {
+        background-position: 100% 50%;
+    }
+
+    100% {
+        background-position: 0% 50%;
+    }
+}
 
 
 .NavBar {
@@ -61,18 +112,20 @@ body {
 
 .secondaryButton {
     z-index: 100;
-    font-size: 25px;
-    position: absolute;
-    left: 55vw;
-    top: 30vw;
+    font-size: 20px;
+    /* position: absolute; */
+    /* left: 55vw; */
+    /* top: 30vw; */
     background-color: rgba(24, 24, 24, .5);
-    border: 1px solid white;
     border-radius: 1rem;
-    margin-top: 2%;
+    margin-top: 10%;
+    margin-left: 20%;
     color: white;
-    font-family: Sohne Breit;
-    padding: 1vw;
+    /* font-family: Sohne Breit; */
+    padding: .6vw;
     transition: all .2s ease-in-out;
+    font-family: 'Tapestry',
+    cursive;
 }
 
 .secondaryButton:hover{
@@ -98,21 +151,26 @@ LANDING PAGE */
 .landingPageText {
     /* width: 30vw; */
     position: absolute;
-    /* z-index: 100; */
-    /* left: 30vw; */
-    top: 4vw;
+    line-height: 160px;
+    left: 10vw;
+ 
+
+   
+
    
 }
 
 .landingPageText > p {
     color: white;
-    margin: 0%;
+    /* margin: 0%; */
     font-size: 17vw;
+    /* box-shadow: 0px 2px 10px 0px rgb(255, 0, 0); */
 }
 .xenotech{
     /* z-index: 100; */
     /* min-height: 300px;/ */
     /* background-color: red; */
+    
    
 }
 
@@ -120,7 +178,7 @@ LANDING PAGE */
 display: flex;
 font-size: 30px;
 position: absolute;
-top: 16vw;
+top: 44vw;
 left: 16vw;
 
 
@@ -144,10 +202,10 @@ padding: .5vw;
 }
 
 .FeaturedDropsCard:hover{
-    background-image: radial-gradient(rgba(0, 200, 255, .5), #272932);
+    background-image: radial-gradient(rgba(0, 200, 255, .5), red);
     cursor: pointer;
     transform: scale(1.01);
-    box-shadow: 0px 2px 10px 0px rgb(79, 100, 236);
+    box-shadow: 0px 2px 10px 0px rgb(255, 0, 0);
 
 }
 
@@ -173,17 +231,22 @@ padding: .5vw;
 
 /* 
 SHOE CUSTOMIZER */
-
+.colorPickerContainer{
+    display: flex;
+    justify-content: center;
+}
 .colorPicker{
-    position: absolute;
-    right: 8vw;
-    top: 25vw;
+    position: fixed;
+    /* right: 35vw; */
+    top: 60px;
     color: white;
     border-radius: 1.4rem;
     border: .2px dashed grey ;
     z-index: 100;
     padding: 1%;
     transition: all .5s ease-in-out;
+    font-family: 'Tapestry',
+    cursive;
 }
 
 .colorPicker:hover{
@@ -196,15 +259,20 @@ SHOE CUSTOMIZER */
 .colorPickerLabel{
     display: flex;
     font-size: 9px;
+    justify-content: center;
 }
 
 .color{
     display: flex;
+    /* align-content: center; */
+    /* margin: 0%; */
+    /* padding: 0%; */
     align-items: center;
+    /* justify-content: ce; */
 }
 
 .color > input{
-    margin: calc(.025rem + .2vw) 2vw 0 2vw;
+    margin: calc(.025rem + .2vw) 2vw .4vw 1vw;
     border-radius: 50%;
     border: none;
     height: 30px;
@@ -224,10 +292,24 @@ SHOE CUSTOMIZER */
     cursor: pointer;
 }
 
-.canvas3D{
-    height: 44vw;
-    margin-left: 30%;
+.buttonContainer {
+    display: flex;
+    justify-content: center;
 }
+
+
+
+
+
+.comingSoonWrapper{
+    display: none;
+    position:absolute;
+    font-style: italic;
+    font-size:20px;
+    font-weight: bold;
+    color: red;
+}
+
 
 
 
@@ -246,3 +328,205 @@ SHOE CUSTOMIZER */
         width: 100%;
     }
 }
+
+@media only screen and (max-width: 700px) {
+.canvas3D {
+    height: 80vw;
+    margin-top: 260px;
+    z-index: 100;
+}
+
+.colorPicker{
+    /* position: relative; */
+    /* left: 2vw; */
+    /* top: 10vw; */
+    display: flex;
+    justify-content: space-between;
+    justify-content: space-around;
+    padding: 2vw;
+
+    color: white;
+    width: 60vw;
+    border-radius: 1.4rem;
+    border: .2px dashed grey;
+    z-index: 100;
+    /* padding: 0%; */
+    /* margin: 0%; */
+    transition: all .5s ease-in-out;
+    font-family: 'Tapestry',
+    cursive;
+    position: fixed;
+    /* align-items: center; */
+    /* justify-content: center; */
+}
+
+.colorPickerLabel {
+    display: flex;
+    font-size: 19px;
+    justify-content: center;
+    align-items: center;
+   
+}
+
+.secondaryButton {
+    z-index: 100;
+    font-size: 50px;
+    position: absolute;
+    /* left: 55vw; */
+    bottom: 50px;
+    /* left: 18%; */
+    background-color: rgba(24, 24, 24, .5);
+    border: .5px solid white;
+    border-radius: 1rem;
+    margin-top: 10%;
+    margin-left: 0%;
+    color: white;
+    /* font-family: Sohne Breit; */
+    padding: 1.6vw;
+    transition: all .2s ease-in-out;
+    font-family: 'Tapestry',
+        cursive;
+}
+
+
+
+}
+
+@media only screen and (min-width: 700px) {
+   
+    /* .canvas3D {
+        width: 100%;
+        height: 44vw;
+        margin-top: 60px;
+
+    } */
+
+    .colorPickerLabel {
+        display: flex;
+        font-size: 19px;
+        justify-content: center;
+        align-items: center;
+    
+    }
+
+    .secondaryButton {
+        z-index: 100;
+        font-size: 50px;
+        position: absolute;
+        /* left: 55vw; */
+        bottom: 100px;
+        left:25%;
+        background-color: rgba(24, 24, 24, .5);
+        border: 1px solid white;
+        border-radius: 1rem;
+        margin-top: 10%;
+        margin-left: 20%;
+        color: white;
+        /* font-family: Sohne Breit; */
+        padding: .6vw;
+        transition: all .2s ease-in-out;
+        font-family: 'Tapestry',
+            cursive;
+    }
+
+    .canvas3D {
+                height: 550px;
+        margin-top: 240px;
+        z-index: 100;
+    }
+    
+    .colorPicker {
+        /* position: relative; */
+        /* left: 2vw; */
+        /* top: 10vw; */
+        display: flex;
+        justify-content: space-between;
+        justify-content: space-around;
+        padding: 1vw 0 1vw 0 ;
+    
+        color: white;
+        width: 400px;
+        border-radius: 1.4rem;
+        border: .2px dashed grey;
+        z-index: 100;
+        /* padding: 0%; */
+        /* margin: 0%; */
+        transition: all .5s ease-in-out;
+        font-family: 'Tapestry',
+            cursive;
+        position: fixed;
+        /* align-items: center; */
+        /* justify-content: center; */
+    }
+}
+
+@media only screen and (min-width: 1200px) {
+   
+    .canvas3D {
+        /* display: flex; */
+        width: 100%;
+        /* max-width: 100vw; */
+        height: 44vw;
+        /* margin-top: 170px; */
+        margin-top: 60px;
+
+
+        /* margin-right: 40vw; */
+        /* position: fixed/ */
+        /* z-index: 100; */
+    }
+
+    .secondaryButton {
+        z-index: 100;
+        font-size: 50px;
+        position: absolute;
+        /* left: 55vw; */
+        bottom: 100px;
+        left:25%;
+        background-color: rgba(24, 24, 24, .5);
+        border: 1px solid white;
+        border-radius: 1rem;
+        margin-top: 10%;
+        margin-left: 20%;
+        color: white;
+        /* font-family: Sohne Breit; */
+        padding: .6vw;
+        transition: all .2s ease-in-out;
+        font-family: 'Tapestry',
+            cursive;
+    }
+
+    .canvas3D {
+        height: 600px;
+        margin-top: 190px;
+        z-index: 100;
+    }
+    
+    .colorPicker {
+        /* position: relative; */
+        /* left: 2vw; */
+        /* top: 10vw; */
+        display: flex;
+        justify-content: space-between;
+        justify-content: space-around;
+        /* padding: 2vw; */
+    
+        color: white;
+        width: 60vw;
+        border-radius: 1.4rem;
+        border: .2px dashed grey;
+        z-index: 100;
+        width: 300px;
+        /* padding: 0%; */
+        /* margin: 0%; */
+        transition: all .5s ease-in-out;
+        font-family: 'Tapestry',
+            cursive;
+        position: fixed;
+        padding: 1vw 1vw 1vw 1vw;
+        width: 400px;
+        /* align-items: center; */
+        /* justify-content: center; */
+    }
+}
+
